# zego-challenge

./: Makefile  README.md  SUBMISSION.md  pyproject.toml
crawler_app/: __main__.py  cli.py  constants.py  crawler.py  exceptions.py  parser.py  utils.py
tests/: conftest.py  test_cli.py  test_crawler.py  test_parser.py  test_utils.py
